# pyduck-ona-viz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REVIEW.md  SECURITY.md  UPGRADE_REPORT.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: dashboard.md  hierarchy_viz.md  hr_viz.md  index.md  network_viz.md  org_chart.md  span_control.md  theme.md
examples/: README.md  full_viz_demo.py  gallery.md  jupyter_demo.ipynb
examples/output/: 01_span_of_control.html  05_silo_map.html  09_org_chart.html  10_summary_dashboard.html
src/pyduck_ona_viz/: __init__.py  dashboard.py  hierarchy_viz.py  hr_viz.py  network_viz.py  org_chart.py  span_control.py  theme.py
src/pyduck_ona_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_dashboard.py  test_hierarchy_viz.py  test_hr_viz.py  test_network_viz.py  test_org_chart.py  test_span_control.py  test_theme.py  test_viz.py
