[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyduck-ona-viz"
version = "0.1.0"
description = "Publication-quality visualizations for organizational chart analysis and people analytics (companion to pyduck-ona)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EzraAir555", email = "ezraair555@gmail.com"},
]
maintainers = [
    {name = "EzraAir555", email = "ezraair555@gmail.com"},
]
keywords = [
    "duckdb", "hr", "people-analytics", "organizational-network-analysis",
    "ona", "hierarchy", "span-of-control", "org-chart", "dashboard",
    "matplotlib", "plotly", "pyvis", "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Human Resources Professionals",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
interactive = [
    "plotly>=5.18",
    "pyvis>=0.3",
]
full = [
    "pyduck-ona>=0.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/ezraair555/pyduck-ona-viz"
Repository = "https://github.com/ezraair555/pyduck-ona-viz"
Issues = "https://github.com/ezraair555/pyduck-ona-viz/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyduck_ona_viz*"]

[tool.setuptools.package-data]
pyduck_ona_viz = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"